<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="56dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:textColorHint="@android:color/white"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_account"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:hint="@string/account"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:textColorHint="@android:color/white"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_password"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_switch"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/switch_to_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>